# sastle

./: .gitignore  CLAUDE.md  README.md  package-lock.json
esp-idf-setup/: ESP_IDF_SETUP_GUIDE.md  activate_env.sh  manual_setup.md  setup_esp_idf.sh  setup_esp_idf_v6.sh  update_esp_idf_v6.sh
esp32/: CMakeLists.txt  M5ATOMS3R_LCD_BACKLIGHT_SOLUTION.md  partitions.csv  quick_serial_check.py  requirement.md  sdkconfig.defaults  serial_test.py  test_checklist_complete.md  test_environment.md  test_gap_analysis.md  test_patterns.md  test_specification.md
esp32/components/: spi_protocol.h
esp32/config/: README.md  config_manager.h  sphere_config.h  sphere_config_runtime.json
esp32/imu_test/: sdkconfig.defaults
esp32/m5unified_test/: CMakeLists.txt  README.md
esp32/main/: CMakeLists.txt  error_handler.c  main.c  system_config.c  task_manager.c
esp32/main/include/: app_config.h  error_handler.h  system_config.h  task_manager.h
esp32/test_hello_world/main/: CMakeLists.txt  backlight_test.c  backlight_test.h  direct_imu_lcd_test.c  gpio_backlight_test.c  gpio_backlight_test.h  gpio_test.c  i2c_backlight_test.c  i2c_backlight_test.h  i2c_imu_test.c  imu_integration_test.c  imu_lcd_display_test.c  imu_lcd_display_test.h  lcd_debug_test.c  lcd_imu_display.c  lcd_imu_display.h  lcd_unit_test.c  lcd_unit_test.h  m5atoms3r_lcd.c  m5atoms3r_lcd.h  main.c  main_complex.c  psram_advanced_test.c  psram_test.c  quaternion_visualizer.c  quaternion_visualizer.h  simple_bno055.c  simple_bno055.h  simple_test.c  test_PSRAM.cpp
raspi/: main.py  ros2_bridge.py  subscriber.py
(+41 files in other folders)
